--- a/index.html
+++ b/index.html
@@ -1,34 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Odin Project - Landing Page</title>
     <link rel="stylesheet" href="css/styles.css">
-    <title>Cheyenne Graves</title>
 </head>
+
 <body>
-    <div class="page-container">
-        <div class="content-box">
-            <div class="row">
-                <img src="media/chey2.jpg" id="my-pic">
-                <div class="bio-content">
-                    <h1>About Me</h1>
-                    <p>Hello, my name is Cheyenne Graves and I am a college student pursuing a degree in sonography! I enjoy hiking, photography, and reading. 
-                        I aspire to learn as much as possible, so if you would like to help me pay for school books or buy me a cup of coffee please use the 
-                        links below!</p>
+    <div class="header-container">
+        <div class="size-container-header">
+            <div id="logo">
+                VIKING TRUTHS
+            </div>
+            <nav>
+                <ul id="nav-list">
+                    <li id="homebutton">HOME</li>
+                    <li id="infobutton">TRUTH</li>
+                    <li id="signbutton">SIGN UP</li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <div class="hero-container">
+        <div class="size-container">
+            <div class="col-container">
+                <div id="hero-title">
+                    The Truth of the Vikings
+                </div>
+                <div id="hero-p">
+                    Were the vikings murderous pillagers and rapists, or were they primarily farmers? Did the vikings
+                    believe in Odin, Thor, and Freyr, or are these just historical assumptions? The truth will send you
+                    berserk! Sign up for weekly Viking FACTS! (Backed by Medieval and Viking Historians)
+                </div>
+                <div id="hero-button">
+                    Sign Up
                 </div>
             </div>
-            <div class="row">
-                <ul class="list-ul">
-                    <a href="https://www.reddit.com/u/GryffindorGraves/"><li class="list-icon"><img src="media/reddit.png">REDDIT</li></a>
-                    <a href="https://www.instagram.com/cheyennegraves95"><li class="list-icon"><img src="media/instagram.png">INSTAGRAM</li></a>
-                    <a href="mailto:cheyenne.graves95@gmail.com"><li class="list-icon"><img src="media/email.png">EMAIL</li></a>
-                    <a href="venmoqr.html"><li class="list-icon"><img src="media/venmo.png">VENMO</li></a>
-                    <a href="https://www.paypal.me/CheyenneGraves95"><li class="list-icon"><img src="media/paypal.png">PAYPAL</li></a>
-                </ul>
+            <div id="hero-image">
+                <img src="media/axe.jpg">
             </div>
         </div>
     </div>
+    <div class="info-container">
+        <div class="size-container">
+            <div id="info-title">
+                Pop-culture got some of it wrong!
+            </div>
+        </div>
+        <div class="size-container">
+            <div class="size2-container">
+                <div class="col-container">
+                    <div class="info-image">
+                        <img src="media/boat.png">
+                    </div>
+                    <p>
+                        Their boats were technologically unrivalled in their age. They were fast, nimble, and commanded
+                        by some of the best naval capable people of the era.
+                    </p>
+                </div>
+                <div class="col-container">
+                    <div class="info-image">
+                        <img src="media/grain.png">
+                    </div>
+                    <p>
+                        Most vikings were actually farmers first and foremost. Going "viking" was secondary to their
+                        home lives.
+                    </p>
+                </div>
+                <div class="col-container">
+                    <div class="info-image">
+                        <img src="media/horned.png">
+                    </div>
+                    <p>
+                        Vikings did not have horned helms (probably). This was a legend originating by artists
+                        portraying Vikings with horned helmets, hundreds of years after the Viking era.
+                    </p>
+                </div>
+                <div class="col-container">
+                    <div class="info-image">
+                        <img src="media/religion.png">
+                    </div>
+                    <p>
+                        Norse religion (as we know it today) is based on context and assumptions. The belief systems
+                        were not written down,
+                        rather they were passed down by word of mouth. All we have are accounts by some Christians and
+                        historical context to go on.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="quote-container">
+        <div class="size-container">
+            <div class="size2-container">
+                <div class="col-container">
+                    <h2 id="quote">
+                        "Let not thy mind be overmuch crossed by unwise men at thronged meetings of folk; for oft these
+                        speak worse than they wot of; lest thou be called a dastard, and art minded to think that thou
+                        art even as is said; slay such an one on another day, and so reward his ugly talk."
+                    </h2>
+                    <div id="quote-source">
+                        -Volsunga Saga, c.21
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="call-container">
+        <div class="size-container">
+            <div id="call-box">
+                <div class="sign-col-container">
+                    <h4>You Need To Know More!</h4>
+                    <p>Sign up today for our weekly Viking facts and history lessons!</p>
+                </div>
+                <div id="sign-up-button">
+                    Sign up
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="copy-container">
+        <div class="size-container-header">
+            <p id="copyright">
+                Copyright Arkyvio 2022
+            </p>
+        </div>
+    </div>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
+
 </html>
