--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="header-container">
         <div class="size-container-header">
             <div id="logo">
-                VIKING TRUTHS
+                STEM CELL RESEARCH AND GENETIC ENGINEERING
             </div>
             <nav>
                 <ul id="nav-list">
-                    <li id="homebutton">HOME</li>
-                    <li id="infobutton">TRUTH</li>
-                    <li id="signbutton">SIGN UP</li>
+                    <li id="homebutton">GENETIC ENGINEERING</li>
+                    <li id="infobutton">SOMATIC / STEM CELLS</li>
+                    <li id="signbutton">ETHICAL CONSIDERATIONS</li>
                 </ul>
             </nav>
         </div>
@@ -28,26 +28,20 @@
         <div class="size-container">
             <div class="col-container">
                 <div id="hero-title">
-                    The Truth of the Vikings
+                    Genetic Engineering
                 </div>
                 <div id="hero-p">
-                    Were the vikings murderous pillagers and rapists, or were they primarily farmers? Did the vikings
-                    believe in Odin, Thor, and Freyr, or are these just historical assumptions? The truth will send you
-                    berserk! Sign up for weekly Viking FACTS! (Backed by Medieval and Viking Historians)
+                    To understand stem cell research and genetic engineering, you must first understand what a genome is. A genome is a collection of every gene in our bodies. A gene is a segment of DNA that contains the instructions for the production of biological molecules, usually proteins. Some genes determine phenotypes, or physical characteristics such as eye color and height. Others can influence our risk of developing certain genetic conditions such as sickle cell anemia or muscular dystrophy. Where are these genes found? Well, most humans have 23 pairs of chromosomes, with one of each pair inherited from our father and the other from our mother. Most of our chromosomes are located in the nucleus of a cell. All of the DNA contained in one cell is called the genome. We have one copy of our genome in nearly every cell in our body. Our genomes are 99.8% identical to every other human on the planet. The 0.2% variation is what interests us in healthcare and what could help us to better understand the prediction, prevention, diagnosis, and treatment of diseases.
+
+<br/> Genetic Engineering is the deliberate modification of the characteristics of an organism by manipulating its genetic material. We have many uses for genetic engineering such as the way we produce insulin and hepatitis b vaccines. We also use this technology to develop disease resistant plants which help us to cut down on crop loss. For crops like potatoes, the loss caused by microbial infection is estimated to be as high as 30% (Dong & Ronald, 2019). With a population that is set to reach 9.8 billion by 2050, protecting our resources is vital (Dong & Ronald, 2019). This modification does not come without risks though, there is a chance that changing crops to prevent pathogen destruction could introduce new allergens into the food supply.
                 </div>
-                <div id="hero-button">
-                    Sign Up
-                </div>
-            </div>
-            <div id="hero-image">
-                <img src="media/axe.jpg">
             </div>
         </div>
     </div>
     <div class="info-container">
         <div class="size-container">
             <div id="info-title">
-                Pop-culture got some of it wrong!
+                Somatic Cells and Stem Cells
             </div>
         </div>
         <div class="size-container">
@@ -57,8 +51,7 @@
                         <img src="media/boat.png">
                     </div>
                     <p>
-                        Their boats were technologically unrivalled in their age. They were fast, nimble, and commanded
-                        by some of the best naval capable people of the era.
+                        Somatic cells are any cell of a living organism other than the reproductive cells. These consist of things like nerve cells and skin cells.
                     </p>
                 </div>
                 <div class="col-container">
@@ -66,28 +59,8 @@
                         <img src="media/grain.png">
                     </div>
                     <p>
-                        Most vikings were actually farmers first and foremost. Going "viking" was secondary to their
-                        home lives.
-                    </p>
-                </div>
-                <div class="col-container">
-                    <div class="info-image">
-                        <img src="media/horned.png">
-                    </div>
-                    <p>
-                        Vikings did not have horned helms (probably). This was a legend originating by artists
-                        portraying Vikings with horned helmets, hundreds of years after the Viking era.
-                    </p>
-                </div>
-                <div class="col-container">
-                    <div class="info-image">
-                        <img src="media/religion.png">
-                    </div>
-                    <p>
-                        Norse religion (as we know it today) is based on context and assumptions. The belief systems
-                        were not written down,
-                        rather they were passed down by word of mouth. All we have are accounts by some Christians and
-                        historical context to go on.
+                        Stem cells are special human cells that are able to develop into many different cell types. These types of cells can range from muscle cells to brain cells
+                        and in some cases they can also fix damaged tissues.
                     </p>
                 </div>
             </div>
@@ -98,12 +71,10 @@
             <div class="size2-container">
                 <div class="col-container">
                     <h2 id="quote">
-                        "Let not thy mind be overmuch crossed by unwise men at thronged meetings of folk; for oft these
-                        speak worse than they wot of; lest thou be called a dastard, and art minded to think that thou
-                        art even as is said; slay such an one on another day, and so reward his ugly talk."
+                        ETHICAL CONSIDERATIONS
                     </h2>
                     <div id="quote-source">
-                        -Volsunga Saga, c.21
+                        -Kismekia
                     </div>
                 </div>
             </div>
@@ -114,10 +85,10 @@
             <div id="call-box">
                 <div class="sign-col-container">
                     <h4>You Need To Know More!</h4>
-                    <p>Sign up today for our weekly Viking facts and history lessons!</p>
+                    <p>Click here to watch a video explaining all you need to know about genetic engineering.</p>
                 </div>
                 <div id="sign-up-button">
-                    Sign up
+                    View Video
                 </div>
             </div>
         </div>
