Updated images / Deleted old png / Fixed pallette

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="size-container">
             <div class="col-container">
                 <div id="hero-title">
-                    Genetic Engineering
+                    <center>Genetic Engineering</center>
                 </div>
                 <div id="hero-p">
                     To understand stem cell research and genetic engineering, you must first understand what a genome is. A genome is a collection of every gene in our bodies. A gene is a segment of DNA that contains the instructions for the production of biological molecules, usually proteins. Some genes determine phenotypes, or physical characteristics such as eye color and height. Others can influence our risk of developing certain genetic conditions such as sickle cell anemia or muscular dystrophy. Where are these genes found? Well, most humans have 23 pairs of chromosomes, with one of each pair inherited from our father and the other from our mother. Most of our chromosomes are located in the nucleus of a cell. All of the DNA contained in one cell is called the genome. We have one copy of our genome in nearly every cell in our body. Our genomes are 99.8% identical to every other human on the planet. The 0.2% variation is what interests us in healthcare and what could help us to better understand the prediction, prevention, diagnosis, and treatment of diseases.
@@ -48,7 +48,7 @@
             <div class="size2-container">
                 <div class="col-container">
                     <div class="info-image">
-                        <img src="media/boat.png">
+                        <img src="media/neuron.svg">
                     </div>
                     <p>
                         Somatic cells are any cell of a living organism other than the reproductive cells. These consist of things like nerve cells and skin cells.
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-container">
                     <div class="info-image">
-                        <img src="media/grain.png">
+                        <img src="media/genetic.svg">
                     </div>
                     <p>
                         Stem cells are special human cells that are able to develop into many different cell types. These types of cells can range from muscle cells to brain cells
