--- a/index.html
+++ b/index.html
@@ -1,107 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Odin Project - Landing Page</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-<body>
+  <body>
     <div class="header-container">
-        <div class="size-container-header">
-            <div id="logo">
-                STEM CELL RESEARCH AND GENETIC ENGINEERING
-            </div>
-            <nav>
-                <ul id="nav-list">
-                    <li id="homebutton">GENETIC ENGINEERING</li>
-                    <li id="infobutton">SOMATIC / STEM CELLS</li>
-                    <li id="signbutton">ETHICAL CONSIDERATIONS</li>
-                </ul>
-            </nav>
-        </div>
+      <div class="size-container-header">
+        <div id="logo">STEM CELL RESEARCH AND GENETIC ENGINEERING</div>
+        <nav>
+          <ul id="nav-list">
+            <li id="homebutton">GENETIC ENGINEERING</li>
+            <li id="infobutton">SOMATIC / STEM CELLS</li>
+            <li id="signbutton">ETHICAL CONSIDERATIONS</li>
+          </ul>
+        </nav>
+      </div>
     </div>
     <div class="hero-container">
-        <div class="size-container">
-            <div class="col-container">
-                <div id="hero-title">
-                    <center>Genetic Engineering</center>
-                </div>
-                <div id="hero-p">
-                    To understand stem cell research and genetic engineering, you must first understand what a genome is. A genome is a collection of every gene in our bodies. A gene is a segment of DNA that contains the instructions for the production of biological molecules, usually proteins. Some genes determine phenotypes, or physical characteristics such as eye color and height. Others can influence our risk of developing certain genetic conditions such as sickle cell anemia or muscular dystrophy. Where are these genes found? Well, most humans have 23 pairs of chromosomes, with one of each pair inherited from our father and the other from our mother. Most of our chromosomes are located in the nucleus of a cell. All of the DNA contained in one cell is called the genome. We have one copy of our genome in nearly every cell in our body. Our genomes are 99.8% identical to every other human on the planet. The 0.2% variation is what interests us in healthcare and what could help us to better understand the prediction, prevention, diagnosis, and treatment of diseases.
+      <div class="size-container">
+        <div class="col-container">
+          <div id="hero-title">
+            <center>Genetic Engineering</center>
+          </div>
+          <div id="hero-p">
+            To understand stem cell research and genetic engineering, you must
+            first understand what a genome is. A genome is a collection of every
+            gene in our bodies. A gene is a segment of DNA that contains the
+            instructions for the production of biological molecules, usually
+            proteins. Some genes determine phenotypes, or physical
+            characteristics such as eye color and height. Others can influence
+            our risk of developing certain genetic conditions such as sickle
+            cell anemia or muscular dystrophy. Where are these genes found?
+            Well, most humans have 23 pairs of chromosomes, with one of each
+            pair inherited from our father and the other from our mother. Most
+            of our chromosomes are located in the nucleus of a cell. All of the
+            DNA contained in one cell is called the genome. We have one copy of
+            our genome in nearly every cell in our body. Our genomes are 99.8%
+            identical to every other human on the planet. The 0.2% variation is
+            what interests us in healthcare and what could help us to better
+            understand the prediction, prevention, diagnosis, and treatment of
+            diseases.
 
-<br/> Genetic Engineering is the deliberate modification of the characteristics of an organism by manipulating its genetic material. We have many uses for genetic engineering such as the way we produce insulin and hepatitis b vaccines. We also use this technology to develop disease resistant plants which help us to cut down on crop loss. For crops like potatoes, the loss caused by microbial infection is estimated to be as high as 30% (Dong & Ronald, 2019). With a population that is set to reach 9.8 billion by 2050, protecting our resources is vital (Dong & Ronald, 2019). This modification does not come without risks though, there is a chance that changing crops to prevent pathogen destruction could introduce new allergens into the food supply.
-                </div>
-            </div>
+            <br />
+            Genetic Engineering is the deliberate modification of the
+            characteristics of an organism by manipulating its genetic material.
+            We have many uses for genetic engineering such as the way we produce
+            insulin and hepatitis b vaccines. We also use this technology to
+            develop disease resistant plants which help us to cut down on crop
+            loss. For crops like potatoes, the loss caused by microbial
+            infection is estimated to be as high as 30% (Dong & Ronald, 2019).
+            With a population that is set to reach 9.8 billion by 2050,
+            protecting our resources is vital (Dong & Ronald, 2019). This
+            modification does not come without risks though, there is a chance
+            that changing crops to prevent pathogen destruction could introduce
+            new allergens into the food supply.
+          </div>
+          <div id="hero-image">
+            <img src="media/data.svg" />
+          </div>
         </div>
+      </div>
     </div>
     <div class="info-container">
-        <div class="size-container">
-            <div id="info-title">
-                Somatic Cells and Stem Cells
+      <div class="size-container">
+        <div id="info-title">Somatic Cells and Stem Cells</div>
+      </div>
+      <div class="size-container">
+        <div class="size2-container">
+          <div class="col-container">
+            <div class="info-image">
+              <img src="media/neuron.svg" />
             </div>
-        </div>
-        <div class="size-container">
-            <div class="size2-container">
-                <div class="col-container">
-                    <div class="info-image">
-                        <img src="media/neuron.svg">
-                    </div>
-                    <p>
-                        Somatic cells are any cell of a living organism other than the reproductive cells. These consist of things like nerve cells and skin cells.
-                    </p>
-                </div>
-                <div class="col-container">
-                    <div class="info-image">
-                        <img src="media/genetic.svg">
-                    </div>
-                    <p>
-                        Stem cells are special human cells that are able to develop into many different cell types. These types of cells can range from muscle cells to brain cells
-                        and in some cases they can also fix damaged tissues.
-                    </p>
-                </div>
+            <p>
+              Somatic cells are any cell of a living organism other than the
+              reproductive cells. These consist of things like nerve cells and
+              skin cells.
+            </p>
+          </div>
+          <div class="col-container">
+            <div class="info-image">
+              <img src="media/genetic.svg" />
             </div>
+            <p>
+              Stem cells are special human cells that are able to develop into
+              many different cell types. These types of cells can range from
+              muscle cells to brain cells and in some cases they can also fix
+              damaged tissues.
+            </p>
+          </div>
         </div>
+      </div>
     </div>
     <div class="quote-container">
-        <div class="size-container">
-            <div class="size2-container">
-                <div class="col-container">
-                    <h2 id="quote">
-                        ETHICAL CONSIDERATIONS
-                    </h2>
-                    <div id="quote-source">
-                        -Kismekia
-                    </div>
-                </div>
-            </div>
+      <div class="size-container">
+        <div class="size2-container">
+          <div class="col-container">
+            <h2 id="quote">ETHICAL CONSIDERATIONS</h2>
+            <div id="quote-source">-Kismekia</div>
+          </div>
         </div>
+      </div>
     </div>
     <div class="call-container">
-        <div class="size-container">
-            <div id="call-box">
-                <div class="sign-col-container">
-                    <h4>You Need To Know More!</h4>
-                    <p>Click here to watch a video explaining all you need to know about genetic engineering.</p>
-                </div>
-                <div id="sign-up-button">
-                    View Video
-                </div>
-            </div>
+      <div class="size-container">
+        <div id="call-box">
+          <div class="sign-col-container">
+            <h4>You Need To Know More!</h4>
+            <p>
+              Click here to watch a video explaining all you need to know about
+              genetic engineering.
+            </p>
+          </div>
+          <div id="sign-up-button">View Video</div>
         </div>
+      </div>
     </div>
     <div class="copy-container">
-        <div class="size-container-header">
-            <p id="copyright">
-                
-            </p>
-        </div>
+      <div class="size-container-header">
+        <p id="copyright"></p>
+      </div>
     </div>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/scripts.js"></script>
-</body>
-
+  </body>
 </html>
