Attempting PPT embed

--- a/index.html
+++ b/index.html
@@ -61,9 +61,14 @@
             new allergens into the food supply.
           </div>
         </div>
+        <a href="#inline" data-lity>Click</a>
         <!-- <div id="hero-image">
           <img src="media/data.svg" />
         </div> -->
+        <!-- <iframe src="https://mysouthcollegetnedu-my.sharepoint.com/personal/cg5712_my_south_edu/_layouts/15/Doc.aspx?sourcedoc={f624257d-0358-4a49-b57c-b51061d30e15}&amp;action=embedview&amp;wdAr=1.7777777777777777&amp;wdEaaCheck=0" width="476px" height="288px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe> -->
+        <div id="inline" style="background:#fff" class="lity-hide">
+          <iframe src="//docs.google.com/gview?url=https://www.arkyv.io/media/stem.pdf&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe>
+        </div>
       </div>
     </div>
     <div class="info-container">
@@ -137,7 +142,7 @@
     </div>
     <div class="copy-container">
       <div class="size-container-header">
-        <p id="copyright"></p>
+        <p id="copyright">Copyright Cheyenne Graves 2023</p>
       </div>
     </div>
     <script src="js/jquery-3.6.0.min.js"></script>
