Finished with powerpoint popup and styles, title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Odin Project - Landing Page</title>
+    <title>Cheyenne Graves - Genetic Engineering</title>
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/lity.css" />
   </head>
@@ -29,45 +29,56 @@
             <center>Genetic Engineering</center>
           </div>
           <div id="hero-p">
-            To understand stem cell research and genetic engineering, you must
-            first understand what a genome is. A genome is a collection of every
-            gene in our bodies. A gene is a segment of DNA that contains the
-            instructions for the production of biological molecules, usually
-            proteins. Some genes determine phenotypes, or physical
-            characteristics such as eye color and height. Others can influence
-            our risk of developing certain genetic conditions such as sickle
-            cell anemia or muscular dystrophy. Where are these genes found?
-            Well, most humans have 23 pairs of chromosomes, with one of each
-            pair inherited from our father and the other from our mother. Most
-            of our chromosomes are located in the nucleus of a cell. All of the
-            DNA contained in one cell is called the genome. We have one copy of
-            our genome in nearly every cell in our body. Our genomes are 99.8%
-            identical to every other human on the planet. The 0.2% variation is
-            what interests us in healthcare and what could help us to better
-            understand the prediction, prevention, diagnosis, and treatment of
-            diseases.
-            <br /><br />
-            Genetic Engineering is the deliberate modification of the
-            characteristics of an organism by manipulating its genetic material.
-            We have many uses for genetic engineering such as the way we produce
-            insulin and hepatitis b vaccines. We also use this technology to
-            develop disease resistant plants which help us to cut down on crop
-            loss. For crops like potatoes, the loss caused by microbial
-            infection is estimated to be as high as 30% (Dong & Ronald, 2019).
-            With a population that is set to reach 9.8 billion by 2050,
-            protecting our resources is vital (Dong & Ronald, 2019). This
-            modification does not come without risks though, there is a chance
-            that changing crops to prevent pathogen destruction could introduce
-            new allergens into the food supply.
+            <p class="hero-p-p">
+              To understand stem cell research and genetic engineering, you must
+              first understand what a genome is. A genome is a collection of
+              every gene in our bodies. A gene is a segment of DNA that contains
+              the instructions for the production of biological molecules,
+              usually proteins. Some genes determine phenotypes, or physical
+              characteristics such as eye color and height. Others can influence
+              our risk of developing certain genetic conditions such as sickle
+              cell anemia or muscular dystrophy. Where are these genes found?
+              Well, most humans have 23 pairs of chromosomes, with one of each
+              pair inherited from our father and the other from our mother. Most
+              of our chromosomes are located in the nucleus of a cell. All of
+              the DNA contained in one cell is called the genome. We have one
+              copy of our genome in nearly every cell in our body. Our genomes
+              are 99.8% identical to every other human on the planet. The 0.2%
+              variation is what interests us in healthcare and what could help
+              us to better understand the prediction, prevention, diagnosis, and
+              treatment of diseases.
+            </p>
+            <p class="hero-p-p">
+              Genetic Engineering is the deliberate modification of the
+              characteristics of an organism by manipulating its genetic
+              material. We have many uses for genetic engineering such as the
+              way we produce insulin and hepatitis b vaccines. We also use this
+              technology to develop disease resistant plants which help us to
+              cut down on crop loss. For crops like potatoes, the loss caused by
+              microbial infection is estimated to be as high as 30% (Dong &
+              Ronald, 2019). With a population that is set to reach 9.8 billion
+              by 2050, protecting our resources is vital (Dong & Ronald, 2019).
+              This modification does not come without risks though, there is a
+              chance that changing crops to prevent pathogen destruction could
+              introduce new allergens into the food supply.
+            </p>
+            <center>
+              <a href="#inline" id="presentClick" data-lity
+                >Click Here to view a powerpoint on this subject.</a
+              >
+            </center>
           </div>
         </div>
-        <a href="#inline" data-lity>Click</a>
         <!-- <div id="hero-image">
           <img src="media/data.svg" />
         </div> -->
         <!-- <iframe src="https://mysouthcollegetnedu-my.sharepoint.com/personal/cg5712_my_south_edu/_layouts/15/Doc.aspx?sourcedoc={f624257d-0358-4a49-b57c-b51061d30e15}&amp;action=embedview&amp;wdAr=1.7777777777777777&amp;wdEaaCheck=0" width="476px" height="288px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe> -->
-        <div id="inline" style="background:#fff" class="lity-hide">
-          <iframe src="//docs.google.com/gview?url=https://www.arkyv.io/media/stem.pdf&embedded=true" style="width:900px; height:750px;" frameborder="0"></iframe>
+        <div id="inline" style="background: #fff" class="lity-hide">
+          <iframe
+            src="https://docs.google.com/gview?url=https://www.arkyv.io/media/stem.pdf&embedded=true"
+            style="width: 900px; height: 750px"
+            frameborder="0"
+          ></iframe>
         </div>
       </div>
     </div>
